labs/ingress/spec/pi/update/ingress-with-cache.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pi
  labels:
    co.courselabs.k8s: ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: "on" 
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_cache static-cache;
      proxy_cache_valid 10m;
spec:
  rules:
  - host: pi.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pi-internal
            port: 
              name: http
